tests/invalid/semantico_ciclo_sin_salida.flow
// EXPECT: E309
workflow demo {
    var ok : bool
    start -> validar
    validar -> end if ok
    validar -> bucle_a if not ok
    bucle_a -> bucle_b
    bucle_b -> bucle_a
}
